<resources>

    <string name="app_name">_044_LokasyonaGoreCokDilliUygulamalar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
 
    <string name="locale_label">Locale: </string>
    <string name="locale">"World-Wide" </string>
    
    <string name="hello_label">Greet Someone: </string>
    <string name="hello">Hello!</string>
    
    <string name="goodbye_label">Say Farewell: </string>
    <string name="goodbye">Goodbye!</string>
    
    <string name="please_label">Say Please: </string>
    <string name="please">Please </string>
    
    <string name="thankyou_label">Thank Someone: </string>
    <string name="thankyou">Thank You! </string>
    
    <string name="help_label">Call for Aid: </string>
    <string name="help">Help! </string>
    
    <string name="flag_label">Flag: </string>
    <string name="map_label">Map: </string>
    
    <string name="web_label">Web URL: </string>
    <string name="web_url">"https://www.mimaraslan.com/"</string>

</resources>