<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/country_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 

    android:background="#DAAA"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />

    
    
     <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/TableLayout01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/phrase_margin"
                android:stretchColumns="1" >

                <TableRow
                    android:id="@+id/TableRow01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_LocaleLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/locale_label"
                        android:textColor="@color/locale_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>

                    <TextView
                        android:id="@+id/TextView_Locale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/locale"
                        android:textColor="@color/phrase_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_HelloLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_label"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>

                    <TextView
                        android:id="@+id/TextView_Hello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/hello"
                        android:textColor="@color/phrase_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_GoodbyeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goodbye_label"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>

                    <TextView
                        android:id="@+id/TextView_Goodbye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/goodbye"
                        android:textColor="@color/phrase_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_PleaseLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_label"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>

                    <TextView
                        android:id="@+id/TextView_Please"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/please"
                        android:textColor="@color/phrase_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_ThankyouLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thankyou_label"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>

                    <TextView
                        android:id="@+id/TextView_Thankyou"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/thankyou"
                        android:textColor="@color/phrase_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_HelpLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_label"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>

                    <TextView
                        android:id="@+id/TextView_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/help"
                        android:textColor="@color/phrase_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/TableLayout02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/phrase_margin" >

                <TableRow
                    android:id="@+id/TableRow07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_FlagLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flag_label"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/ImageView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:saveEnabled="true"
                        android:src="@drawable/flag" >
                    </ImageView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_MapLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_label"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/ImageViewMap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/map" >
                    </ImageView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_WebSite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/web_label"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:autoLink="web"
                        android:text="@string/web_url"
                        android:textColor="@color/phrase_color"
                        android:textSize="@dimen/phrase_size" >
                    </TextView>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
    
</LinearLayout>